[tool.poetry]
name = "trivial-triage"
version = "0.1.0"
description = "Your Comprehensive Vulnerability Management Tool to automate decision and resolution reporting"
authors = ["0x73746F66 <github.chris@trivialsec.com>"]
license = "GNU AGPLv3"
readme = "PYPI.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.18"
pydantic = "^2.7.2"
ssvc = "^1.0.8"

[tool.poetry.group.dev.dependencies]
uv = "^0.2.5"
pre-commit-uv = "^3.7.0"
pre-commit = "^3.7.1"
ruff = "^0.4.7"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
coverage-badge = "^1.1.1"
poetry = "^1.8.3"
isort = "^5.13.2"
pip-audit = "^2.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Repository" = "https://github.com/trivialsec/trivial-triage.git"
